--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">PhotoGallery</string>
     <string name="search">Search</string>
     <string name="clear_search">Clear Search</string>
+    <string name="notification_channel_name">FlickrFetchr</string>
     <string name="start_polling">Start polling</string>
     <string name="stop_polling">Stop polling</string>
     <string name="new_pictures_title">New PhotoGallery Pictures</string>
